# HackathonHuita

./: .gitattributes  .gitignore  CorrelationAnalysis3.3.py  LSTM.py  README.md  RandomForestModel.py  analyza3.5.py  analyza3.6.py  casovepriznaky4.1.py  main.py  marketingCompany3.4.py  marketingTrend3.2.py  predictionModel.py  prophet.ipynb  pyproject.toml  randomforestmodel.ipynb  randomforestmodel.py  requirements.txt  ridgeregression.py  sarima.py  secondary.py  statsDaysMonth3.1.py  xgboost.py  xgboost_model.ipynb  xgboost_model.py
.ipynb_checkpoints/: prophet-checkpoint.ipynb  randomforestmodel-checkpoint.ipynb  xgboost_model-checkpoint.ipynb
data/: sell_data_cleaned.csv
models/: prophet.py  xgboost_model.py
notebooks/: ex.ipynb  forecaster_autoreg.ipynb  prophet.ipynb  randomforestmodel.ipynb  sarima.ipynb  xgboost_model.ipynb
src/models/: forecaster_autoreg.py  prophet.py  randomforestmodel.py  sarima.py  xgboost_model.py
src/utils/: load_and_preprocess.py  plot.py
